package com.backend.model;

public enum TipoUsuario {
    FREE, PREMIUM
}