package com.backend.service;

import com.backend.model.Usuario;

public interface SpotifyPremium {
    String descargar(Usuario usuario);
}
